# Priya

./: README.md  app.py  pyproject.toml  requirements.txt
instance/: database.db
templates/: events.html  home.html  index.html  login.html  register.html  sales.html  settings.html
