[tool.poetry]
name = "repl-nix-zoo-sphere"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_zoo_sphere"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
